<resources>
    <string name="app_name">Meditation Tracker</string>
    <string name="record">Start</string>
    <string name="stop_recording">Stop</string>
    <string name="add_entry">Add manually</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="menu_title">Menu</string>
    <string name="menu_home">Home</string>
    <string name="menu_summary">Summaries</string>
    <string name="menu_weekly">Weekly Summary</string>
    <string name="menu_monthly">Monthly Overview</string>
    <string name="menu_yearly">Yearly Analysis</string>
    <string name="menu_custgoals">Set Goals</string>
    <string name="menu_export">Export Data</string>
    <string name="close_menu">Close menu</string>
    <string name="blank_spaces">blank</string>
    <string name="timer_card_title">Timer</string>
    <string name="manual_card_title">Manual Entry</string>
    <string name="week_summ_desc">Your weekly meditation progress</string>
    <string name="month_summ_desc">Your monthly meditation progress</string>
    <string name="year_summ_desc">Your yearly meditation progress</string>
    <string name="total_hours">Total hours: </string>
    <string name="goals_title">Set a New Goal</string>
    <string name="goals_desc">Create a new meditation goal</string>
    <string name="current_version_details"> 20/08/2026
        \n- Moved Export/Import to Settings &amp; Info screen.
        \n- Now supports different title for each screen.
        \n- Improved app security by setting `android:exported="false"` and removing unnecessary intent filters for internal activities.
        \n
        \nNEXT:
        \n- Main screen should dynamically adjust constraints based on goals visibility.
        \n- Smaller devices still need meticulous planning.
        \n- Add an option in settings to disable landscape specific layouts.
    </string>
    <string name="v1.16.c">v1.16.c:\n- NOICE!\n  - Next indent.\n   • bullet 1 ▶ Bullet 2 › bullet 3 ৹</string>
    <string name="close_menu_button">Close Menu</string>
    <string name="open_menu_button">Open Menu</string>
    <string name="total_hours_placeholder">Total: 0.00 hours</string>
    <string name="nav_label_main_placeholder">January</string>
    <string name="nav_label_sub_placeholder">2026</string>
    <string name="report_button_desc">Generate report for displayed Month or Year</string>
    <string name="next_nav_button_desc">Switch to next week or month or year</string>
    <string name="prev_nav_button_desc">Switch to previous week or month or year</string>
    <string name="menu_import_button_text">Import</string>
    <string name="menu_export_button_text">Export</string>
    <string name="menu_reports_button_text">Reports</string>
    <string name="menu_about_app_button_text">About app</string>
    <string name="menu_release_notes_button_text">Release notes</string>
    <string name="btn_light_mode">Switch to Light mode</string>
    <string name="btn_auto_mode">Switch to Auto mode</string>
    <string name="btn_dark_mode">Switch to Dark mode</string>

    <!-- Screen Toolbar Titles -->
    <string name="title_activity_main">Meditation Tracker</string>
    <string name="title_activity_summary">Summary</string>
    <string name="title_activity_reports">Reports</string>
    <string name="title_activity_goals">Goals</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_release_notes">Changelogs</string>
    <string name="title_activity_settings">Settings &amp; Info</string>
</resources>