<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/menu_drawer"
    android:background="?attr/colorSurfaceContainer"
    android:clickable="true"
    tools:context=".BaseActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Menu button on toolbar next to title -->
        <ImageButton
            android:id="@+id/close_menu"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginTop="0dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/close_menu_button"
            android:src="@drawable/arrow_menu_close"
            android:scaleType="fitEnd"
            android:padding="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnSurfaceVariant" /> <!-- Close Menu Button -->

        <!-- Centered title on actionbar -->
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:textAppearance="?attr/textAppearanceToolbarTitle"
            tools:theme="@style/TextAppearance.MeditationTracker.AppFont.ToolbarTitle"
            android:letterSpacing="0.05"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="20dp"
            android:text="Meditation\nTracker"
            android:textColor="?attr/colorOnSurface"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/close_menu"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias="0"/>

    </androidx.constraintlayout.widget.ConstraintLayout> <!-- Constrained layout for menubutton and Title -->

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/menuDivider"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:alpha="0.5"
        android:layout_marginVertical="12dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/menu_head"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/menuDivider"
        app:layout_constraintBottom_toTopOf="@id/theme_btn_container"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintEnd_toEndOf="parent"
        android:requiresFadingEdge="vertical"
        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:id="@+id/menu_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Home Button -->
            <Button
                android:id="@+id/menu_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@android:color/transparent"
                android:textAppearance="?attr/textAppearanceAppButton"
                tools:theme="@style/TextAppearance.MeditationTracker.AppFont.AppButton"
                android:gravity="start|center"
                android:letterSpacing="0.03"
                android:text="@string/menu_home"
                android:textAllCaps="false"
                android:textColor="?attr/colorOnSurfaceVariant"
                app:icon="@drawable/active_dot"
                app:iconGravity="end"
                app:iconSize="8dp"/>

            <!-- Summary Button -->
            <Button
                android:id="@+id/menu_summary"
                android:layout_width="match_parent"
                android:gravity="start|center"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceAppButton"
                tools:theme="@style/TextAppearance.MeditationTracker.AppFont.AppButton"
                android:text="@string/menu_summary"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:textAllCaps="false"
                android:letterSpacing="0.03"
                android:background="@android:color/transparent"
                app:icon="@drawable/active_dot"
                app:iconGravity="end"
                app:iconSize="8dp"/> <!-- Summary Button -->

            <!-- Reports Button -->
            <Button
                android:id="@+id/menu_reports"
                android:layout_width="match_parent"
                android:gravity="start|center"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceAppButton"
                tools:theme="@style/TextAppearance.MeditationTracker.AppFont.AppButton"
                android:text="@string/menu_reports_button_text"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:textAllCaps="false"
                android:letterSpacing="0.03"
                android:background="@android:color/transparent"
                android:visibility="visible"
                app:icon="@drawable/active_dot"
                app:iconGravity="end"
                app:iconSize="8dp"/> <!-- Reports Button -->

            <!-- Custom Goals Button -->
            <Button
                android:id="@+id/menu_goals"
                android:layout_width="match_parent"
                android:gravity="start|center"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceAppButton"
                tools:theme="@style/TextAppearance.MeditationTracker.AppFont.AppButton"
                android:background="@android:color/transparent"
                android:text="@string/menu_custgoals"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:textAllCaps="false"
                android:elevation="0dp"
                android:letterSpacing="0.03"
                app:icon="@drawable/active_dot"
                app:iconGravity="end"
                app:iconSize="8dp"/> <!-- Custom Goals Button -->

            <!-- About app button -->
            <Button
                android:id="@+id/menu_about"
                android:layout_width="match_parent"
                android:gravity="start|center"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textAppearance="?attr/textAppearanceAppButton"
                tools:theme="@style/TextAppearance.MeditationTracker.AppFont.AppButton"
                android:text="@string/menu_about_app_button_text"
                android:textAllCaps="false"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:letterSpacing="0.03"
                app:icon="@drawable/active_dot"
                app:iconGravity="end"
                app:iconSize="8dp"/> <!-- About app button -->

            <!-- Release notes button -->
            <Button
                android:id="@+id/menu_releasenotes"
                android:layout_width="match_parent"
                android:gravity="start|center"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textAppearance="?attr/textAppearanceAppButton"
                tools:theme="@style/TextAppearance.MeditationTracker.AppFont.AppButton"
                android:textAllCaps="false"
                android:text="@string/menu_release_notes_button_text"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:letterSpacing="0.03"
                app:icon="@drawable/active_dot"
                app:iconGravity="end"
                app:iconSize="8dp"/> <!-- Release notes button -->

            <!-- Export / Import Toggle Group -->
            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/export_import_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                app:singleSelection="false"
                android:layout_gravity="center"
                app:innerCornerSize="3dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/menu_items"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <!-- Export Button -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/menu_exportButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="?attr/colorPrimary"
                    android:insetRight="1dp"
                    android:padding="12dp"
                    android:text="@string/menu_export_button_text"
                    android:textAppearance="?attr/textAppearanceAppButton"
                    android:textColor="?attr/colorOnPrimary"
                    app:cornerRadius="?attr/customButtonRadius"
                    android:letterSpacing="0.08"
                    app:icon="@drawable/download_icon_inverse"
                    app:iconGravity="textStart"
                    app:iconTint="?attr/colorOnPrimary"
                    tools:theme="@style/TextAppearance.MeditationTracker.AppFont.AppButton" />

                <!-- Import Button -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/menu_importButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="?attr/colorPrimary"
                    android:insetLeft="1dp"
                    android:padding="12dp"
                    android:text="@string/menu_import_button_text"
                    android:letterSpacing="0.08"
                    android:textAppearance="?attr/textAppearanceAppButton"
                    android:textColor="?attr/colorOnPrimary"
                    app:cornerRadius="?attr/customButtonRadius"
                    app:icon="@drawable/download_icon"
                    app:iconGravity="textEnd"
                    app:iconTint="?attr/colorOnPrimary"
                    tools:theme="@style/TextAppearance.MeditationTracker.AppFont.AppButton" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/theme_btn_container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="16dp"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/menu_app_settings"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:contentDescription="Opens app settings"
            android:tooltipText="App settings"
            android:scaleX="1.1"
            android:scaleY="1.1"
            android:visibility="visible"
            android:elevation="2dp"
            android:alpha="0.8"
            app:srcCompat="@drawable/settings_24dp_opsz40"
            app:tint="?attr/colorOnSurface"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="65dp"/>

        <ImageButton
            android:id="@+id/btn_light"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_corners"
            android:contentDescription="@string/btn_light_mode"
            android:tooltipText="Current mode Auto, switch to Light mode"
            android:scaleX="1.1"
            android:scaleY="1.1"
            android:visibility="visible"
            android:elevation="2dp"
            app:srcCompat="@drawable/mode_light"
            android:layout_alignParentEnd="true"/>

        <ImageButton
            android:id="@+id/btn_dark"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_corners"
            android:contentDescription="@string/btn_dark_mode"
            android:tooltipText="Current mode Light, switch to Dark mode"
            android:scaleX="1.1"
            android:scaleY="1.1"
            android:visibility="visible"
            android:elevation="2dp"
            app:srcCompat="@drawable/mode_dark"
            android:layout_alignParentEnd="true"/>

        <ImageButton
            android:id="@+id/btn_auto"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_corners"
            android:contentDescription="@string/btn_auto_mode"
            android:tooltipText="Current mode Dark, switch to Auto mode"
            android:scaleX="1"
            android:scaleY="1"
            android:visibility="visible"
            android:elevation="2dp"
            app:srcCompat="@drawable/mode_auto"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
