<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Summary card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/summary_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="6dp"
            app:barrierMargin="16dp"
            app:cardBackgroundColor="?attr/colorPrimaryVariant"
            app:cardCornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.04">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/month_summ"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/page_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:filterTouchesWhenObscured="false"
                    android:focusableInTouchMode="true"
                    android:fontFamily="@font/atkinsonhyperlegiblenext_bold"
                    android:letterSpacing="0.02"
                    android:text="@string/menu_monthly"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="23sp"
                    app:layout_constraintBottom_toTopOf="@id/page_desc"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    tools:ignore="TextViewEdits" /> <!-- Month overview -->

                <TextView
                    android:id="@+id/page_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:filterTouchesWhenObscured="false"
                    android:focusableInTouchMode="true"
                    android:fontFamily="@font/atkinsonhyperlegiblenext_regular"
                    android:letterSpacing="0.02"
                    android:text="@string/month_summ_desc"
                    android:textColor="@color/onPrimary2"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toTopOf="@id/total_hours"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/page_title"
                    app:layout_constraintVertical_bias="0.0"
                    tools:ignore="TextViewEdits" /> <!-- Month Overview description -->

                <ImageButton
                    android:id="@+id/report_button"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_margin="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/round_button_bg"
                    android:contentDescription="@string/report_button_desc"
                    android:rotation="0"
                    android:src="@drawable/analytics_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0" />

                <TextView
                    android:id="@+id/total_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="9dp"
                    android:layout_marginBottom="8dp"
                    android:filterTouchesWhenObscured="false"
                    android:focusableInTouchMode="true"
                    android:fontFamily="@font/atkinsonhyperlegiblenext_bold"
                    android:letterSpacing="0.01"
                    android:text="@string/total_hours_placeholder"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@id/barChart"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/page_desc"
                    app:layout_constraintVertical_bias="0.0"
                    tools:ignore="TextViewEdits" /> <!-- Month's total time -->

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/barChart"
                    android:layout_width="match_parent"
                    android:layout_height="450dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="12dp"
                    app:layout_constraintBottom_toTopOf="@id/nav_container"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/total_hours"
                    app:layout_constraintVertical_bias="0"
                    android:animateLayoutChanges="true"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/nav_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/barChart">

                    <ImageButton
                        android:id="@+id/btn_prev"
                        android:layout_width="60dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="55dp"
                        android:backgroundTint="@android:color/transparent"
                        android:contentDescription="@string/prev_nav_button_desc"
                        android:src="@drawable/baseline_arrow_back"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/btn_next"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/btn_next"
                        android:layout_width="60dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="55dp"
                        android:layout_marginEnd="16dp"
                        android:backgroundTint="@android:color/transparent"
                        android:contentDescription="@string/next_nav_button_desc"
                        android:src="@drawable/baseline_arrow_forward"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/btn_prev"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@id/btn_prev"
                        app:layout_constraintEnd_toStartOf="@id/btn_next"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5">

                        <TextView
                            android:id="@+id/nav_label_main"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:filterTouchesWhenObscured="false"
                            android:focusableInTouchMode="true"
                            android:fontFamily="@font/atkinsonhyperlegiblenext_medium"
                            android:text="@string/nav_label_main_placeholder"
                            android:textColor="@color/onPrimary2"
                            android:textSize="18sp"
                            tools:ignore="TextViewEdits" />

                        <TextView
                            android:id="@+id/nav_label_sub"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:filterTouchesWhenObscured="false"
                            android:focusableInTouchMode="true"
                            android:fontFamily="@font/atkinsonhyperlegiblenext_medium"
                            android:text="@string/nav_label_sub_placeholder"
                            android:textColor="@color/onPrimary2"
                            android:textSize="12sp"
                            tools:ignore="TextViewEdits" /> <!-- Week Date display -->
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView> <!-- Monthly overview card -->
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>